# synced-flash

./: Cargo.toml  Dockerfile.arm64
.cargo/: config.toml
.github/workflows/: deploy_bigselfcloud.yml  deploy_selfcloud.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: gamepad.rs  mod.rs  player.rs  player_web.rs  touchmanager.rs  video_player.rs  virtual_buttons.rs
app/src/components/icons/: mod.rs
app/src/networking/: room_manager.rs  rtc_connect.rs
app/src/pages/: home_page.rs  room.rs
app/src/utils/: keycode.rs
common/: Cargo.toml
common/src/: lib.rs  message.rs
server/: Cargo.toml
server/src/: main.rs
server/src/room/: calls_api.rs  mod.rs
style/: main.scss
