[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
leptos-use = { workspace = true }
tracing.workspace = true

common = { path = "../common", default-features = false, features = [
    "hydrate",
] }
codee = { workspace = true }
serde_urlencoded = { workspace = true }
uuid.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true


ruffle_render_canvas = { workspace = true, optional = true }
ruffle_web_common = { workspace = true, optional = true }
ruffle_render = { workspace = true, optional = true }
ruffle_render_webgl = { workspace = true, optional = true }
ruffle_render_wgpu = { workspace = true, optional = true }
ruffle_video_software = { workspace = true, optional = true }
ruffle_core = { workspace = true, optional = true }

base64.workspace = true
chrono = { workspace = true, features = ["wasmbind", "clock"] }

url.workspace = true
wasm-bindgen-futures.workspace = true

serde.workspace = true
bincode.workspace = true

svg.workspace = true

strum.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "canvas",
    "webgl",
    # "wgpu-webgl",
    # "webgpu",
    "ruffle_web_common",
    "ruffle_render",
    # "ruffle_video_software",
    "ruffle_core",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "leptos-use/ssr",
]

# core features
avm_debug = ["ruffle_core/avm_debug"]
lzma = ["ruffle_core/lzma"]
jpegxr = ["ruffle_core/jpegxr"]

# web features
canvas = ["ruffle_render_canvas"]
webgl = ["ruffle_render_webgl"]
webgpu = ["ruffle_render_wgpu"]
wgpu-webgl = ["ruffle_render_wgpu", "ruffle_render_wgpu/webgl"]
profiling = []
